Shared/Footer.razor.css
.footer {
    margin: 6rem 0 0 0;
    overflow-x: hidden;
}

h5 {
    font-weight: bolder;
    margin-bottom: 1rem;
}

.footer-top {
    width: 100%;
}

.footer-bot {
    padding: 2rem;
    background-color: #AAAAAA;
    display: grid;
    gap: 3rem;
    position: relative;
}

.promo a {
    color: white;
}

.socials {
    margin-left: -0.75rem;
}

.promo {
    position: relative;
    color: white;
    background-color: #222222;
    text-align: center;
    padding: 0.5rem;
}

.footer-icon, .footer-socials, .footer-contact, .footer-pages {
    grid-row-start: 1;
    justify-content: center;
}

.pages {
    display: flex;
    flex-direction: column;
}

.pages a {
    width: min-content;
}

.to-top {
    position: absolute;
    bottom: -1rem;
    right: 0rem;
    transform: rotate(-25deg);
    padding: 2rem;
    background-color: #217226;
    cursor: pointer;
}

.to-top-icon {
    color: white;
    transform: rotate(25deg);
}

@media only screen and (max-width: 1100px) {
    .footer-icon, .footer-socials {
        grid-row-start: 1;
    }

    .footer-contact, .footer-pages {
        grid-row-start: 2;
    }
}

@media only screen and (max-width: 700px) {
    .footer-bot {
        display: flex;
        flex-direction: column;
        gap: 3rem;
        padding: 2rem 1rem;
    }
}

